--- a/sample.env
+++ b/sample.env
@@ -1,1 +1,2 @@
 PORT=3000
+DB_URL='mongodb+srv://akshayyanandd:uoxVHEydB0z53rw1@cluster0.crsqn.mongodb.net/exercise_tracker?retryWrites=true&w=majority'
